// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToDo renders base form when props.editForm is false 1`] = `
<div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="task"
    >
      Task
    </label>
    <input
      class="form-control"
      id="task"
      name="task"
      placeholder="Clean the toilets"
      type="text"
      value="foo"
    />
    
  </div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="assigneeId"
    >
      Assignee
    </label>
    <select
      class="form-control"
      id="assigneeId"
      name="assigneeId"
    >
      <option
        value=""
      >
        Clear Assignee
      </option>
      <option
        value="id1"
      >
        foo@example.com
      </option>
    </select>
    
  </div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="dueBy"
    >
      Due By
    </label>
    <input
      class="form-control"
      id="dueBy"
      name="dueBy"
      placeholder="mm/dd/yyyy"
      type="date"
      value="05/20/2020"
    />
    
  </div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="category"
    >
      Category
    </label>
    <input
      class="form-control"
      id="category"
      list="categories"
      name="category"
      type="text"
      value="foo"
    />
    <datalist
      id="categories"
    >
      <option
        value="foo"
      />
      <option
        value="bar"
      />
    </datalist>
    
  </div>
</div>
`;

exports[`ToDo renders edit form when props.editForm is true 1`] = `
<div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="task"
    >
      Task
    </label>
    <input
      class="form-control"
      id="task"
      name="task"
      placeholder="Clean the toilets"
      type="text"
      value="foo"
    />
    
  </div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="assigneeId"
    >
      Assignee
    </label>
    <select
      class="form-control"
      id="assigneeId"
      name="assigneeId"
    >
      <option
        value=""
      >
        Clear Assignee
      </option>
      <option
        value="id1"
      >
        foo@example.com
      </option>
    </select>
    
  </div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="dueBy"
    >
      Due By
    </label>
    <input
      class="form-control"
      id="dueBy"
      name="dueBy"
      placeholder="mm/dd/yyyy"
      type="date"
      value="05/20/2020"
    />
    
  </div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="category"
    >
      Category
    </label>
    <input
      class="form-control"
      id="category"
      list="categories"
      name="category"
      type="text"
      value="foo"
    />
    <datalist
      id="categories"
    >
      <option
        value="foo"
      />
      <option
        value="bar"
      />
    </datalist>
    
  </div>
  <div
    class="mb-3 form-group"
  >
    <div
      class="form-check"
    >
      <input
        class="form-check-input"
        id="completed"
        name="completed"
        type="checkbox"
      />
      <label
        class="form-check-label"
        for="completed"
        title=""
      >
        Completed
      </label>
    </div>
  </div>
</div>
`;
